Updating my_site.html

--- a/public/my_site.html
+++ b/public/my_site.html
@@ -32,7 +32,9 @@
         <p>
         </p>
         </div>
+        <div>
         <img src="images/brian-nickerson.jpg" alt="Brian Nickerson" style="width:250px;height:350px;">
+        </div>
       </span>
       <!-- <div id="back-block"></div> -->
       <!-- <div></div> -->
