--- a/public/my_site.html
+++ b/public/my_site.html
@@ -8,61 +8,66 @@
   </head>
   <body>
     <header>
+      <div>
+        <h1>Eat. Game. Code.</h1>
+      </div>
     </header>
-    <!-- <div id="back-block"></div> -->
+    <div class="black-bar"></div>
     <main>
-    <nav class="top-links">
-      <div class="home"><h2><a href="">Home</a></h2></div>
-      <div class="about"><h2><a href="">About</a></h2></div>
-      <div class="contact"><h2><a href="">Contact</a></h2></div>
-    </nav>
-    <aside id="left">
-    </aside>
-    <content>
-      <h1 class="title">Brian Nickerson - Wyncode Student</h1>
-      <span class="right-image">
-        <div>
-        <p>Hello world! My name is Brian Nickerson, and I'm a student at Wyncode Academy - Fort Lauderdale Cohort 5. I'm a born-and-raised Floridian who grew up in Palm Beach Gardens. When I was younger, I was involved in music performance and Scouting, which I continued with through high school. I can play multiple instruments, including (but not limited to) piano, trumpet, and drums.
-        </p>
-
-        <p>After high school, I went to college for several years and got a Bachelor's degree - the "traditional route." I've held several project management jobs at small companies, one of which was software and web oriented, but I felt like a directionless cog in the machine of life. I found myself unfulfilled in what I was doing, and decided to change directions.
-        </p>
-        <p>For a long as I can remember, I've always had three things I've been passionate about: food, games (video and traditional), and problem solving. The natural conclusion was to become a programmer, but I felt restricted by what I "could" do. What I didn't realize (or didn't want to accept) is that I don't need permission to do what I want with my life, and that I should pursue what I believe in. It's a scary prospect, and is by no means easy, which is what led me to Wyncode.
-        </p>
-        <p>
-        </p>
-        </div>
-        <div>
-        <img src="images/brian-nickerson.jpg" alt="Brian Nickerson" style="width:250px;height:350px;">
-        </div>
-      </span>
-      <!-- <div id="back-block"></div> -->
-      <!-- <div></div> -->
-      <section>
-        <p>Five - Intelligentsia kombucha cardigan synth, chartreuse dreamcatcher direct trade kinfolk keffiyeh pour-over. 90's kickstarter taxidermy, post-ironic knausgaard roof party distillery tilde craft beer. Tilde gochujang bicycle rights, venmo stumptown blue bottle 8-bit. Organic slow-carb tumblr tattooed, chicharrones biodiesel deep v forage freegan mustache blog kitsch kinfolk chartreuse. Blog tattooed pork belly, bespoke freegan tilde jean shorts kale chips ugh four dollar toast twee. Try-hard narwhal tote bag viral master cleanse. Humblebrag cornhole taxidermy selfies, dreamcatcher gastropub pinterest tilde keffiyeh synth narwhal.
-        </p>
-
-        <p>Six - Intelligentsia kombucha cardigan synth, chartreuse dreamcatcher direct trade kinfolk keffiyeh pour-over. 90's kickstarter taxidermy, post-ironic knausgaard roof party distillery tilde craft beer. Tilde gochujang bicycle rights, venmo stumptown blue bottle 8-bit. Organic slow-carb tumblr tattooed, chicharrones biodiesel deep v forage freegan mustache blog kitsch kinfolk chartreuse. Blog tattooed pork belly, bespoke freegan tilde jean shorts kale chips ugh four dollar toast twee. Try-hard narwhal tote bag viral master cleanse. Humblebrag cornhole taxidermy selfies, dreamcatcher gastropub pinterest tilde keffiyeh synth narwhal.
-        </p>
-
-        <p>Seven - Lumbersexual DIY pickled synth pour-over, tumblr pinterest raw denim. Beard four loko truffaut, cold-pressed tumblr freegan bitters occupy ramps portland drinking vinegar dreamcatcher seitan cliche. Pitchfork 90's chillwave pork belly disrupt, bushwick humblebrag chartreuse DIY occupy meggings. Migas freegan truffaut chillwave lumbersexual viral fixie, cardigan normcore tofu cliche letterpress cronut try-hard. Kitsch gastropub wolf, cray viral microdosing VHS brooklyn photo booth keytar cliche. Brooklyn whatever slow-carb, trust fund occupy irony iPhone lomo pug pickled craft beer ennui. Pickled gluten-free street art wayfarers salvia kogi.
-        </p>
-
-        <p>Eight - Freegan 90's pug, raw denim venmo sustainable pinterest bespoke DIY normcore chia. Mlkshk bitters letterpress, vinyl helvetica kickstarter kitsch brunch gentrify tousled chillwave meditation freegan. Vegan tote bag freegan, photo booth sustainable cronut wayfarers dreamcatcher kombucha occupy flexitarian. Master cleanse gochujang four dollar toast banjo lumbersexual hella. XOXO wolf hammock venmo keffiyeh. Lumbersexual polaroid kale chips, squid godard 90's blue bottle yr knausgaard irony street art fap freegan salvia craft beer. 90's hoodie cred try-hard, food truck tattooed gastropub franzen twee waistcoat 3 wolf moon.
-        </p>
-
-        <p>Nine - Leggings VHS try-hard pug, flexitarian DIY meggings PBR&B drinking vinegar. Next level kickstarter thundercats austin. Stumptown mlkshk you probably haven't heard of them, scenester four loko kogi irony pug neutra swag single-origin coffee fingerstache post-ironic VHS everyday carry. Mustache messenger bag post-ironic, etsy chia hashtag quinoa blue bottle forage pitchfork waistcoat bespoke actually lomo VHS. Before they sold out hashtag wolf tofu cronut, vinyl flexitarian. Roof party wayfarers meggings pug seitan, keffiyeh wolf artisan you probably haven't heard of them. Tumblr irony slow-carb fingerstache microdosing, tattooed taxidermy messenger bag echo park 3 wolf moon blog.
-        </p>
-      </section>
-    </content>
-    <aside id="right">
-    </aside>
+      <nav class="top-links">
+        <a href="#"><div class="home"><h2>Home</h2></div></a>
+        <a href="#"><div class="about"><h2>About</h2></div></a>
+        <a href="#"><div class="contact"><h2>Contact</h2></div></a>
+      </nav>
+      <aside id="left">
+      </aside>
+      <content>
+        <h1 class="title">Brian Nickerson - Wyncode Student</h1>
+        <span class="right-image">
+          <div>
+          <p>
+            Hello world! My name is Brian Nickerson, and I'm a student at Wyncode Academy - Fort Lauderdale Cohort 5. I'm a born-and-raised Floridian who grew up in Palm Beach Gardens. Growing up, I really enjoyed playing video games, playing music in concert band, and going camping while in Boy Scouts. I can play multiple instruments (piano, trumpet, drums, others), and I've earned the rank of Eagle Scout.
+          </p>
+          <p>
+            After high school, I went to college for several years and got a Bachelor's degree - the "traditional" education route. After graduating, I got a job at small company doing contract and account review. I made a name for myself and migrated into a product management role, where I worked with our web portal development company. While I really enjoyed creating solutions and solving problems with the programmers, I was passive in creating the solution, and felt unfulfilled with what I was doing, so I decided to change directions.
+          </p>
+          <p>
+            For a long as I can remember, I've always had three things I've been passionate about: food, games (video and traditional), and problem solving. I've had many people encourage me to become a programmer, but I felt restricted by what I "could" do. What I didn't realize (or didn't want to accept) is that I don't need permission to do what I want with my life, and that I should pursue what I believe in. It's a scary prospect, and is by no means easy, which is what led me to Wyncode.
+          </p>
+          <p>
+            I'm currently studying to be a full-stack web developer, focusing on Ruby, Ruby on Rails, HTML, CSS, and JavaScript, as well as how to utilize Heroku, PostgreSQL, Sinatra, and Git. I've had prior experience with Visual Basic, C#, and T-SQL, and I've worked in partnership with a web development firm as the product manager for my company.
+          </p>
+          </div>
+          <div>
+          <img src="images/brian-nickerson.jpg" alt="Brian Nickerson" style="width:250px;height:350px;">
+          </div>
+        </span>
+        <!-- <div id="back-block"></div> -->
+        <!-- <div></div> -->
+        <section>
+          <p>
+            Intelligentsia kombucha cardigan synth, chartreuse dreamcatcher direct trade kinfolk keffiyeh pour-over. 90's kickstarter taxidermy, post-ironic knausgaard roof party distillery tilde craft beer. Tilde gochujang bicycle rights, venmo stumptown blue bottle 8-bit. Organic slow-carb tumblr tattooed, chicharrones biodiesel deep v forage freegan mustache blog kitsch kinfolk chartreuse. Blog tattooed pork belly, bespoke freegan tilde jean shorts kale chips ugh four dollar toast twee. Try-hard narwhal tote bag viral master cleanse. Humblebrag cornhole taxidermy selfies, dreamcatcher gastropub pinterest tilde keffiyeh synth narwhal.
+          </p>
+          <p>
+            Intelligentsia kombucha cardigan synth, chartreuse dreamcatcher direct trade kinfolk keffiyeh pour-over. 90's kickstarter taxidermy, post-ironic knausgaard roof party distillery tilde craft beer. Tilde gochujang bicycle rights, venmo stumptown blue bottle 8-bit. Organic slow-carb tumblr tattooed, chicharrones biodiesel deep v forage freegan mustache blog kitsch kinfolk chartreuse. Blog tattooed pork belly, bespoke freegan tilde jean shorts kale chips ugh four dollar toast twee. Try-hard narwhal tote bag viral master cleanse. Humblebrag cornhole taxidermy selfies, dreamcatcher gastropub pinterest tilde keffiyeh synth narwhal.
+          </p>
+          <p>
+            Lumbersexual DIY pickled synth pour-over, tumblr pinterest raw denim. Beard four loko truffaut, cold-pressed tumblr freegan bitters occupy ramps portland drinking vinegar dreamcatcher seitan cliche. Pitchfork 90's chillwave pork belly disrupt, bushwick humblebrag chartreuse DIY occupy meggings. Migas freegan truffaut chillwave lumbersexual viral fixie, cardigan normcore tofu cliche letterpress cronut try-hard. Kitsch gastropub wolf, cray viral microdosing VHS brooklyn photo booth keytar cliche. Brooklyn whatever slow-carb, trust fund occupy irony iPhone lomo pug pickled craft beer ennui. Pickled gluten-free street art wayfarers salvia kogi.
+          </p>
+          <p>
+            Freegan 90's pug, raw denim venmo sustainable pinterest bespoke DIY normcore chia. Mlkshk bitters letterpress, vinyl helvetica kickstarter kitsch brunch gentrify tousled chillwave meditation freegan. Vegan tote bag freegan, photo booth sustainable cronut wayfarers dreamcatcher kombucha occupy flexitarian. Master cleanse gochujang four dollar toast banjo lumbersexual hella. XOXO wolf hammock venmo keffiyeh. Lumbersexual polaroid kale chips, squid godard 90's blue bottle yr knausgaard irony street art fap freegan salvia craft beer. 90's hoodie cred try-hard, food truck tattooed gastropub franzen twee waistcoat 3 wolf moon.
+          </p>
+        </section>
+      </content>
+      <aside id="right">
+      </aside>
     </main>
     <footer>
-    <p>Contact info:</p>
-    <p>Phone: (929) 399-GAME (4263)</p>
-    <p>Email: EatGameCode@gmail.com</p>
-    <p>Twitter: @EatGameCode</p>
+    <p>Phone: (929) 399-4263</p>
+    <p>Email: <a href="mailto:EatGameCode@gmail.com">EatGameCode@gmail.com</a></p>
+    <p>Twitter: <a href="https://twitter.com/eatgamecode">@EatGameCode</a></p>
+    <p>GitHub: <a href="https://github.com/Brozard">Brozard</a></p>
     </footer>
+    <!-- <link rel="stylesheet" type="text/css" href="my_site.css" /> -->
   </body>
 </html>
