Add 'about' and 'contact', move stylesheets to separate folder, try some ERB partials (not working yet)

--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Brian Nickerson - Portfolio Site</title>
-    <link rel="stylesheet" type="text/css" href="my_site.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/global.css" />
     <!-- <link rel="stylesheet" type="text/css" href="normalize.css" /> -->
   </head>
   <body>
@@ -15,21 +15,21 @@
     <div class="black-bar"></div>
     <main>
       <nav class="top-links">
-        <a href="#"><div class="home"><h2>Home</h2></div></a>
-        <a href="#"><div class="about"><h2>About</h2></div></a>
-        <a href="#"><div class="contact"><h2>Contact</h2></div></a>
+        <a href="/"><div class="home"><h2>Home</h2></div></a>
+        <a href="/about"><div class="about"><h2>About</h2></div></a>
+        <a href="contact"><div class="contact"><h2>Contact</h2></div></a>
       </nav>
       <aside id="left">
       </aside>
       <content>
-        <h1 class="title">Brian Nickerson - Wyncode Student</h1>
+        <h1 class="title">Brian Nickerson - Full Stack Web Developer</h1>
         <span class="right-image">
           <div>
           <p>
-            Hello world! My name is Brian Nickerson, and I'm a student at Wyncode Academy - Fort Lauderdale Cohort 5. I'm a born-and-raised Floridian who grew up in Palm Beach Gardens. Growing up, I really enjoyed playing video games, playing music in concert band, and going camping while in Boy Scouts. I can play multiple instruments (piano, trumpet, drums, others), and I've earned the rank of Eagle Scout.
+            Hello world! My name is Brian Nickerson, and I'm a full stack web developer, specializing in Ruby on Rails. I'm a born-and-raised Floridian who grew up in the West Palm Beach area. Growing up, I really enjoyed playing video games, playing music in concert band, and going camping while in Boy Scouts. I can play multiple instruments (piano, trumpet, drums, others), and I've earned the rank of Eagle Scout.
           </p>
           <p>
-            After high school, I went to college for several years and got a Bachelor's degree - the "traditional" education route. After graduating, I got a job at small company doing contract and account review. I made a name for myself and migrated into a product management role, where I worked with our web portal development company. While I really enjoyed creating solutions and solving problems with the programmers, I was passive in creating the solution, and felt unfulfilled with what I was doing, so I decided to change directions.
+            After graduating from college, I began working for a home security company doing contract and account review. I soon migrated into affiliate training, and later a product management role, where I worked with our web portal development company. While I really enjoyed creating solutions and solving problems with the programmers, I was passive in creating the solution, and felt unfulfilled with what I was doing, so I decided to change directions.
           </p>
           <p>
             For a long as I can remember, I've always had three things I've been passionate about: food, games (video and traditional), and problem solving. I've had many people encourage me to become a programmer, but I felt restricted by what I "could" do. What I didn't realize (or didn't want to accept) is that I don't need permission to do what I want with my life, and that I should pursue what I believe in. It's a scary prospect, and is by no means easy, which is what led me to Wyncode.
@@ -46,15 +46,21 @@
         <!-- <div></div> -->
         <section>
           <p>
+            <a href="https://github.com/Brozard/REPL_Game">
+              <img src="images/food_finder.png" alt="Food Finder" />
+              Food Finder - a REPL game
+            </a>
+          </p>
+          <p>
+            <img src="http://fillmurray.com/275/150" />
             Intelligentsia kombucha cardigan synth, chartreuse dreamcatcher direct trade kinfolk keffiyeh pour-over. 90's kickstarter taxidermy, post-ironic knausgaard roof party distillery tilde craft beer. Tilde gochujang bicycle rights, venmo stumptown blue bottle 8-bit. Organic slow-carb tumblr tattooed, chicharrones biodiesel deep v forage freegan mustache blog kitsch kinfolk chartreuse. Blog tattooed pork belly, bespoke freegan tilde jean shorts kale chips ugh four dollar toast twee. Try-hard narwhal tote bag viral master cleanse. Humblebrag cornhole taxidermy selfies, dreamcatcher gastropub pinterest tilde keffiyeh synth narwhal.
           </p>
           <p>
-            Intelligentsia kombucha cardigan synth, chartreuse dreamcatcher direct trade kinfolk keffiyeh pour-over. 90's kickstarter taxidermy, post-ironic knausgaard roof party distillery tilde craft beer. Tilde gochujang bicycle rights, venmo stumptown blue bottle 8-bit. Organic slow-carb tumblr tattooed, chicharrones biodiesel deep v forage freegan mustache blog kitsch kinfolk chartreuse. Blog tattooed pork belly, bespoke freegan tilde jean shorts kale chips ugh four dollar toast twee. Try-hard narwhal tote bag viral master cleanse. Humblebrag cornhole taxidermy selfies, dreamcatcher gastropub pinterest tilde keffiyeh synth narwhal.
-          </p>
-          <p>
+            <img src="http://fillmurray.com/275/150" />
             Lumbersexual DIY pickled synth pour-over, tumblr pinterest raw denim. Beard four loko truffaut, cold-pressed tumblr freegan bitters occupy ramps portland drinking vinegar dreamcatcher seitan cliche. Pitchfork 90's chillwave pork belly disrupt, bushwick humblebrag chartreuse DIY occupy meggings. Migas freegan truffaut chillwave lumbersexual viral fixie, cardigan normcore tofu cliche letterpress cronut try-hard. Kitsch gastropub wolf, cray viral microdosing VHS brooklyn photo booth keytar cliche. Brooklyn whatever slow-carb, trust fund occupy irony iPhone lomo pug pickled craft beer ennui. Pickled gluten-free street art wayfarers salvia kogi.
           </p>
           <p>
+            <img src="http://fillmurray.com/275/150" />
             Freegan 90's pug, raw denim venmo sustainable pinterest bespoke DIY normcore chia. Mlkshk bitters letterpress, vinyl helvetica kickstarter kitsch brunch gentrify tousled chillwave meditation freegan. Vegan tote bag freegan, photo booth sustainable cronut wayfarers dreamcatcher kombucha occupy flexitarian. Master cleanse gochujang four dollar toast banjo lumbersexual hella. XOXO wolf hammock venmo keffiyeh. Lumbersexual polaroid kale chips, squid godard 90's blue bottle yr knausgaard irony street art fap freegan salvia craft beer. 90's hoodie cred try-hard, food truck tattooed gastropub franzen twee waistcoat 3 wolf moon.
           </p>
         </section>
