Making a few changes to text and styles

--- a/public/home.html
+++ b/public/home.html
@@ -50,17 +50,31 @@
               <img src="images/food_finder.png" alt="Food Finder" />
               Food Finder - a REPL game
             </a>
+            <br/><br/>
+            This program was written in one weekend. After the first week at Wyncode Academy, our class assignment was to create a simple REPL game that gave players multiple layers of multiple options. I chose to create a game where our classmates were working late over the weekend, and we needed to order food.
           </p>
           <p>
-            <img src="http://fillmurray.com/275/150" />
-            Intelligentsia kombucha cardigan synth, chartreuse dreamcatcher direct trade kinfolk keffiyeh pour-over. 90's kickstarter taxidermy, post-ironic knausgaard roof party distillery tilde craft beer. Tilde gochujang bicycle rights, venmo stumptown blue bottle 8-bit. Organic slow-carb tumblr tattooed, chicharrones biodiesel deep v forage freegan mustache blog kitsch kinfolk chartreuse. Blog tattooed pork belly, bespoke freegan tilde jean shorts kale chips ugh four dollar toast twee. Try-hard narwhal tote bag viral master cleanse. Humblebrag cornhole taxidermy selfies, dreamcatcher gastropub pinterest tilde keffiyeh synth narwhal.
+            <a href="https://github.com/Brozard/Voter_Sim">
+              <img src="http://fillmurray.com/275/150" />
+              Voter Sim - a CRUD REPL program
+            </a>
+            <br/><br/>
+            This program was also written in one weekend. After the second week at Wyncode Academy, our class assignment was to create a REPL program that used classes to interact with Voters and Politicians. Our program had to be able to create, list (or read), update, and destroy Voters and Politicians, and have a menu system that would allow the user to keep going back to the main menu. I wanted to add more to my project than what the assignment called for, so I created a mock vote system.
           </p>
           <p>
-            <img src="http://fillmurray.com/275/150" />
+            <a href="https://github.com/kmay00/quiz_code">
+              <img src="http://fillmurray.com/275/150" />
+              QwyzCode - an online quiz platform
+            </a>
+            <br/><br/>
             Lumbersexual DIY pickled synth pour-over, tumblr pinterest raw denim. Beard four loko truffaut, cold-pressed tumblr freegan bitters occupy ramps portland drinking vinegar dreamcatcher seitan cliche. Pitchfork 90's chillwave pork belly disrupt, bushwick humblebrag chartreuse DIY occupy meggings. Migas freegan truffaut chillwave lumbersexual viral fixie, cardigan normcore tofu cliche letterpress cronut try-hard. Kitsch gastropub wolf, cray viral microdosing VHS brooklyn photo booth keytar cliche. Brooklyn whatever slow-carb, trust fund occupy irony iPhone lomo pug pickled craft beer ennui. Pickled gluten-free street art wayfarers salvia kogi.
           </p>
           <p>
-            <img src="http://fillmurray.com/275/150" />
+            <a href="https://github.com/Brozard/discomerus_v1">
+              <img src="http://fillmurray.com/275/150" />
+              Show Runner - an online quiz platform
+            </a>
+            <br/><br/>
             Freegan 90's pug, raw denim venmo sustainable pinterest bespoke DIY normcore chia. Mlkshk bitters letterpress, vinyl helvetica kickstarter kitsch brunch gentrify tousled chillwave meditation freegan. Vegan tote bag freegan, photo booth sustainable cronut wayfarers dreamcatcher kombucha occupy flexitarian. Master cleanse gochujang four dollar toast banjo lumbersexual hella. XOXO wolf hammock venmo keffiyeh. Lumbersexual polaroid kale chips, squid godard 90's blue bottle yr knausgaard irony street art fap freegan salvia craft beer. 90's hoodie cred try-hard, food truck tattooed gastropub franzen twee waistcoat 3 wolf moon.
           </p>
         </section>
