--- a/public/_repos.html
+++ b/public/_repos.html
@@ -1,32 +1,20 @@
-<p class="col-md-12">
-  <a href="https://github.com/Brozard/REPL_Game">
-    <img src="images/food_finder.png" alt="Food Finder" /><br/>
-    Food Finder - a REPL game
-  </a>
-  <br/><br/>
-  This program was written in one weekend. After the first week at Wyncode Academy, our class assignment was to create a simple REPL game that gave players multiple layers of multiple options. I chose to create a game where our classmates were working late over the weekend, and we needed to order food.
-</p>
-<p class="col-md-12">
-  <a href="https://github.com/Brozard/Voter_Sim">
-    <img src="http://fillmurray.com/275/150" /><br/>
-    Voter Sim - a CRUD REPL program
-  </a>
-  <br/><br/>
-  This program was also written in one weekend. After the second week at Wyncode Academy, our class assignment was to create a REPL program that used classes to interact with Voters and Politicians. Our program had to be able to create, list (or read), update, and destroy Voters and Politicians, and have a menu system that would allow the user to keep going back to the main menu. I wanted to add more to my project than what the assignment called for, so I created a mock vote system.
-</p>
-<p class="col-md-12">
-  <a href="https://github.com/kmay00/quiz_code">
-    <img src="http://fillmurray.com/275/150" /><br/>
-    QwyzCode - an online quiz platform
-  </a>
+<p class="col-md-12 col-sm-12">
+  <em>Omni-Scheduler - Personal Calendar to Share with Friends</em>
+  <a href="https://github.com/Brozard/scheduler_app">Github</a> | Demo Site (Coming Soon)
   <br/><br/>
   
 </p>
-<p class="col-md-12">
-  <a href="https://github.com/Brozard/discomerus_v1">
-    <img src="http://fillmurray.com/275/150" /><br/>
-    Show Runner - an online quiz platform
-  </a>
+
+<p class="col-md-12 sol-sm-12">
+  <em>QwyzCode - User-Generated Quiz Platform</em>
+  <a href="https://github.com/kmay00/quiz_code">Github</a> | <a href="https://hidden-harbor-52431.herokuapp.com/">Demo Site</a>
+  <br/><br/>
+  
+</p>
+
+<p class="col-md-12 col-sm-12">
+  <em>Show Runner - Online Product Acquisition Management Tool</em>
+  <a href="https://github.com/Brozard/discomerus_v1">Github</a> | <a href="https://show-runner.herokuapp.com/login">Demo Site</a>
   <br/><br/>
   
 </p>
