Add link to Omni-Scheduler site.

--- a/public/_repos.html
+++ b/public/_repos.html
@@ -1,6 +1,6 @@
 <p class="col-md-12 col-sm-12">
   <em>Omni-Scheduler - Personal Calendar to Share with Friends</em>
-  <a href="https://github.com/Brozard/scheduler_app">Github</a> | Demo Site (Coming Soon)
+  <a href="https://github.com/Brozard/scheduler_app">Github</a> | <a href="https://omni-scheduler.herokuapp.com">Demo Site</a>
   <br/><br/>
   
 </p>
